<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MainActivity2"
    android:background="@drawable/xavier">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:padding="10dp"
        android:background="#A8272626">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="60dp"
                android:padding="8dp"
                app:srcCompat="@drawable/xiesmall"
                app:tint="#000000" />


            <TextView
                android:id="@+id/cafehouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/header"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnNewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="#03A9F4" />

            <Button
                android:id="@+id/btnNewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="#03A9F4" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>