<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/slider"
                android:scrollbarSize="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xavier Institute Of Engineering"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutCollege"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/textColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:fontFamily="@string/bold"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Computer Science"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Information Technology"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />





                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Electronics"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Sciences and Humanities"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Nos: 91 7249371505/022 24451961"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"

                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Opposite S.L.Raheja Hospital, Mahim Causeway, Mahim (West), Mumbai, Maharashtra 400016"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"

                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@drawable/maps"
                    android:layout_marginTop="@dimen/text_margin"
                    android:scaleType="fitXY"/>



            </LinearLayout>



        </LinearLayout>
    </ScrollView>



</FrameLayout>